--- a/package.json
+++ b/package.json
@@ -13,10 +13,21 @@
   },
   "dependencies": {
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "rx-connect": "0.7.0",
+    "rxjs": "6.3.3"
   },
   "devDependencies": {
-    "nwb": "0.23.x"
+    "babel-eslint": "10.0.1",
+    "eslint": "5.6.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-prettier": "2.7.0",
+    "eslint-plugin-react": "7.11.1",
+    "nwb": "0.23.x",
+    "prettier": "1.14.3"
   },
   "author": "",
   "license": "MIT",
