--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "rx-connect": "0.7.0",
-    "rxjs": "6.3.3"
+    "rxjs": "6.3.3",
+    "semantic-ui-css": "2.4.0",
+    "semantic-ui-react": "0.82.5"
   },
   "devDependencies": {
     "babel-eslint": "10.0.1",
