--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
   "plugins": ["prettier"],
   "rules": {
     "class-methods-use-this": 0,
-    "react/jsx-filename-extension": [1, {"extensions": [".js", ".jsx"]}],
-    "prettier/prettier": ["error"]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "prettier/prettier": ["error"],
+    "globals": { "document": false }
   }
 }
