--- a/package.json
+++ b/package.json
@@ -12,24 +12,29 @@
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "rx-connect": "0.7.0",
-    "rxjs": "6.3.3",
-    "semantic-ui-css": "2.4.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "rx-connect": "^0.7.0",
+    "rxjs": "~5.0.0",
+    "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "0.82.5"
   },
   "devDependencies": {
-    "babel-eslint": "10.0.1",
-    "eslint": "5.6.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "3.1.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-prettier": "2.7.0",
-    "eslint-plugin-react": "7.11.1",
-    "nwb": "0.23.x",
-    "prettier": "1.14.3"
+    "babel-eslint": "^9.0.0",
+    "cross-env": "^5.0.5",
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.11.1",
+    "nwb": "^0.23.0",
+    "prettier": "^1.14.2"
   },
   "author": "",
   "license": "MIT",
